# larch-pickle

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST  MANIFEST-conda.in  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: Playground.yml  build-release.yml  build-weel.yaml  build-wheel.yaml  build-wheel.yml  pypi.yml  python-package-conda.yml  python-publish.yml  test-pypi.yml  upload-to-release.yml  windowstest.yml
conda.recipe/: build.sh  meta.yaml
github-build/: bld.bat  build.sh  meta.yaml
larch/: __init__.py  conversion.hpp  pack.hpp  pickle.cpp  pickle.h  pickle.hpp  pickle.pyx  unpack.hpp
larch/pickle/: __init__.py  pack.hpp  pickle.cpp  pickle.hpp  pickle.pyx  register.py  unpack.hpp
tests/: benchmark.py  plot_benchmark.py  test_pickle2.py  test_pickle3.py
