[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "larch-pickle"
version = "1.4.6"
license = {text = "BSD"}
authors = [{name = "Michael Reithinger", email = "mreithinger@web.de"}]
keywords = ["library"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules"]
description = "A faster python pickle replacement"
readme = "README.rst"

[project.optional-dependencies]
documentation = ["sphinxcontrib-napoleon", "sphinxcontrib-plantuml"]
build = ["cython"]
