[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "larch-pickle"
version = "1.4.7"
license = {text = "BSD-3-Clause"}
authors = [{name = "Michael Reithinger", email = "mreithinger@web.de"}]
keywords = ["library"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries :: Python Modules"]
description = "A faster python pickle replacement"
readme = "README.md"

[project.optional-dependencies]
documentation = ["sphinxcontrib-napoleon", "sphinxcontrib-plantuml"]
build = ["cython"]
